[project]
name = "impact-team-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Blake Moody", email = "32070003+blayyyyyk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "torchmetrics>=1.9.0",
    "dotenv>=0.9.9",
    "torchvision>=0.26.0",
    "tensorboard>=2.20.0",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "einops",
    "pycocotools",
    "psutil"
    "keras-unet-collection>=0.1.13",
    "pandas>=3.0.2",
    "tensorflow>=2.21.0",
    "numpy>=2.4.4",
    "matplotlib>=3.10.8",
    "keras>=3.14.0",
]

[project.scripts]
impact-team-2 = "impact_team_2:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
